--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~10.0.0",
     "ngx-socket-io": "^3.2.0",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^9.15.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
