--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@mdi/font": "^5.5.55",
     "moment": "^2.27.0",
     "ngx-socket-io": "^3.2.0",
     "rxjs": "~6.5.5",
